--- a/frontend/app.html
+++ b/frontend/app.html
@@ -825,7 +825,7 @@
                     <div class="welcome-message">
                         <div class="message-avatar bot-avatar">🤖</div>
                         <div class="message-content">
-                            <p>Hi! I've analyzed your meeting recording. You can now ask me any questions about the meeting content, generate a PDF summary, or send the minutes to participants.</p>
+                            <p>Hi! I've analyzed your meeting recording. You can ask me questions about the meeting content, generate a PDF summary, send minutes to participants, or just have a general conversation - I'm here to help with anything!</p>
                         </div>
                     </div>
                 </div>
@@ -841,7 +841,7 @@
                 
                 <div class="chat-input-container">
                     <div class="chat-input-wrapper">
-                        <textarea id="chatInput" class="chat-input" placeholder="Ask me anything about the meeting..." rows="1"></textarea>
+                        <textarea id="chatInput" class="chat-input" placeholder="Ask me anything..." rows="1"></textarea>
                         <button id="ttsBtn" class="tts-button" title="Toggle Text-to-Speech">🔊</button>
                         <button id="sendBtn" class="send-button">➤</button>
                     </div>
